# django-transaction-tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
apps/core/: api_client.py
apps/core/tests/: test_api_client.py
apps/transactions/: admin.py  forms.py  models.py  services.py  urls.py  views.py
apps/transactions/migrations/: 0001_initial.py  0002_alter_transaction_options_alter_transaction_type.py  0003_alter_transaction_type.py
apps/transactions/tests/: test_forms.py  test_models.py  test_services.py  test_views.py
config/: settings.py  urls.py
config/settings/: base.py
templates/: base.html
templates/transactions/: index.html
templates/transactions/partials/: delete_confirmation.html  edit_form.html  transaction_rows.html
