[project]
name = "django-transaction-tracker"
version = "0.1.0"
description = "Transaction tracker for Ledgerly fintech startup"
authors = [
    {name = "Viktor Rura",email = "ruravictor@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "dj-database-url (>=3.0.1,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "django-widget-tweaks (>=1.5.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.11.1"
black = {extras = ["d"], version = "^25.1.0"}
flake8 = "^7.3.0"
coverage = "^7.9.2"

